--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: Evan Pratten
-subtitle: ewpratten
+subtitle: retrylofe
 email: ewpratten@gmail.com
 description: Computer wizard, student, @frc5024 programming team lead, and radio enthusiast.
 baseurl: "/" # the subpath of your site, e.g. /blog
