--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,7 +1,18 @@
 [
+    
     {
         "name":"ThriftyField",
-        "url":"",
+        "url":"https://github.com/frc5024/ThriftyField",
+        "pi3d":true
+    },
+    {
+        "name":"DevDNS",
+        "url":"https://github.com/Ewpratten/devDNS",
+        "pi3d":true
+    },
+    {
+        "name":"DeepSpace",
+        "url":"https://github.com/frc5024/DeepSpace",
         "pi3d":false
     }
 ]
