--- a/_config.yml
+++ b/_config.yml
@@ -57,4 +57,7 @@ sass:
 
 plugins:
   - jekyll-feed
+  - jekyll-redirect-from # https://github.com/jekyll/jekyll-redirect-from
   - jemoji
+  - jekyll-mentions
+  - jekyll-seo-tag
