--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Computer wizard, student, <a href="https://frc5024.github.io">@frc5024</a> 
   programming team lead, and radio enthusiast.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://retrylife.ca" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 about: >-
   I am a 16 year old programming student. I enjoy learning new concepts, 
