--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,11 @@ kramdown:
   input: GFM
   syntax_highlighter: rouge
 
+collections_dir: collections
+collections:
+  docs:
+    output: true
+
 highlighter: rouge
 
 theme: minima
