--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ keybase_username: ewpratten
 # Build settings
 markdown: kramdown
 kramdown:
-  input: GFM
+  # input: GFM
   syntax_highlighter: rouge
 
 # THIS BREAKS THE SITE!!
