--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Evan Pratten
 description: >- # this means to ignore newlines until "baseurl:"
-  Computer wizard, student, <a href="https://frc5024.github.io">@frc5024</a> 
-  programming team lead, and radio enthusiast.
+  A site where I share my programming work, thoughts, and misadventures
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://retrylife.ca" # the base hostname & protocol for your site, e.g. http://example.com
 
