--- a/_data/projects.json
+++ b/_data/projects.json
@@ -16,7 +16,7 @@
             }
         ],
         "hero": {
-            "img_src": "/assets/images/projects/studentportal.png"
+            "img_src": "/assets/images/projects/studentportal.jp2"
         }
     },
     {
@@ -53,7 +53,7 @@
             }
         ],
         "hero": {
-            "img_src": "/assets/images/projects/lib5k.png"
+            "img_src": "/assets/images/projects/lib5k.jp2"
         }
     },
     {
@@ -73,7 +73,7 @@
             }
         ],
         "hero": {
-            "img_src": "/assets/images/projects/mcinfo.png"
+            "img_src": "/assets/images/projects/mcinfo.jp2"
         }
     },
     {
@@ -95,7 +95,7 @@
             }
         ],
         "hero": {
-            "img_src": "/assets/images/projects/libepn.png"
+            "img_src": "/assets/images/projects/libepn.jp2"
         }
     },
     {
@@ -115,7 +115,7 @@
             }
         ],
         "hero": {
-            "img_src": "/assets/images/projects/ultralight.png"
+            "img_src": "/assets/images/projects/ultralight.jp2"
         }
     },
     {
@@ -163,7 +163,7 @@
             }
         ],
         "hero": {
-            "img_src": "/assets/images/projects/rayzor.png"
+            "img_src": "/assets/images/projects/rayzor.jp2"
         }
     },
     {
