Add a webcam post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "Bazel",
+        "DSLR",
         "Starlark",
-        "microcontrollers"
+        "microcontrollers",
+        "videographers"
     ]
 }
