--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "Starlark",
         "microcontrollers",
         "videographers"
-    ]
+    ],
+    "compile-hero.disable-compile-files-on-did-save-code": true
 }
