--- a/_config.yml
+++ b/_config.yml
@@ -64,14 +64,17 @@ plugins:
   - jekyll-seo-tag
   - jekyll-github-metadata
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - .devcontainer/
+  - .vscode/
+  - README.md
+  - package-lock.json
+  - CNAME
+  - .gitignore
