Write a bitmap post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Bazel",
         "DSLR",
         "Starlark",
+        "libc",
         "microcontrollers",
         "videographers"
     ],
