Add a post on rclone

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Bazel",
         "DSLR",
+        "Keybase",
+        "Rclone",
         "Starlark",
         "libc",
         "microcontrollers",
