--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
     "cSpell.words": [
         "Bazel",
+        "Curseforge",
         "DSLR",
         "Keybase",
+        "Minecraft",
         "Rclone",
         "Starlark",
+        "buildscript",
         "libc",
         "microcontrollers",
+        "modpack",
         "videographers"
     ],
     "compile-hero.disable-compile-files-on-did-save-code": true
