Start core blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,13 @@
         "Rclone",
         "Starlark",
         "buildscript",
+        "clicky",
+        "keycaps",
         "libc",
         "microcontrollers",
         "modpack",
+        "ortholinear",
+        "thinkpad",
         "videographers"
     ],
     "compile-hero.disable-compile-files-on-did-save-code": true
