--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ about: >-
 
 permalink: /blog/:year/:month/:day/:slug
 
-ga_analytics: UA-74118570-2
+ga_analytics: G-7GDG18PD12
 
 # Social
 twitter_username: ewpratten
