Working on vanilla plus post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,11 @@
         "DSLR",
         "Keybase",
         "Minecraft",
+        "Minecraft's",
+        "Optifine",
         "Rclone",
+        "Rosenfeld",
+        "Soundpack",
         "Starlark",
         "buildscript",
         "clicky",
@@ -14,6 +18,7 @@
         "microcontrollers",
         "modpack",
         "ortholinear",
+        "shulker",
         "thinkpad",
         "videographers"
     ],
