--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,14 @@
         "Optifine",
         "Rclone",
         "Rosenfeld",
+        "Socat",
         "Soundpack",
         "Starlark",
         "buildscript",
         "clicky",
         "keycaps",
         "libc",
+        "manpages",
         "microcontrollers",
         "modpack",
         "ortholinear",
