--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "microcontrollers",
         "modpack",
         "ortholinear",
+        "retrylife",
         "shulker",
         "singleplayer",
         "thinkpad",
